# 203.2

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build_windows_msys2.bat  build_windows_vs.cmd  pack_release.ps1  release.yml  vcpkg.json  windows-prebuilt.yml
.github/workflows/: release.yml
docs/: IPPR_MAPPING.md  ROADMAP_WEB.md
samples/: README_media.md  example_session.json
src/: main.cpp
